Add InfiniteBus model (#217)
* Add InfiniteBus model
* Add SetPoint model replacing OmegaRef if a InfiniteBus is present in the model

Signed-off-by: lisrte <laurent.issertial@rte-france.com>